--- a/de/smallfile-ku.po
+++ b/de/smallfile-ku.po
@@ -8,7 +8,7 @@ msgstr ""
 
 #: /views/partials/format-visuals/websites.j2:7
 msgid "A website screenshot."
-msgstr "Ein Website-Screenshot."
+msgstr "Ein Website-Screenshothjn."
 
 #: /views/partials/footer.j2:74
 msgid "AMP Brand Materials"
