--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -41,7 +41,7 @@
         "id": "qFdPvlXBOdUN"
       },
       "source": [
-        "# Introduction to Gradients and Automatic Differentiation"
+        "# Introduction to Gradients and Automatic Differentiation олш"
       ]
     },
     {
