--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -94,6 +94,16 @@
         "## Setup"
       ]
     },
+       {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "qFdPvlXBOdUW"
+      },
+      "source": [
+        "# Introduction"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
