--- a/de/checkpoint.ipynb
+++ b/de/checkpoint.ipynb
@@ -7,7 +7,7 @@
     "id": "Pnn4rDWGqDZL"
    },
    "source": [
-    "##### Copyright 2018 The TensorFlow Authors."
+    "##### Copyright 2018 The TensorFlow Authors ooo."
    ]
   },
   {
